@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.62">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.63">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,9 +25,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.62 [20230407]:
-- Improved Priority Settings
-- Allow MultiSelect Priority Settings
+Changelog 0.3.63 [20230410]:
+- Consumet: Remove cached request before retrying
     </news>
   </extension>
 </addon>
